[project]
name = "the-commons-mcp"
version = "0.1.0"
description = "A shared knowledge store for multi-agent learning, exposed as an MCP server."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
the-commons = "server:main"
